# ChangeLog for sys-apps/pcsc-lite
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/pcsc-lite/ChangeLog,v 1.81 2009/10/05 16:02:08 armin76 Exp $

  05 Oct 2009; Raúl Porcel <armin76@gentoo.org> pcsc-lite-1.5.5.ebuild:
  arm/ia64/m68k/s390/sh/sparc stable wrt #283378

  27 Sep 2009; nixnut <nixnut@gentoo.org> pcsc-lite-1.5.5.ebuild:
  ppc stable #283378

  23 Sep 2009; Jeroen Roovers <jer@gentoo.org> pcsc-lite-1.5.4.ebuild,
  pcsc-lite-1.5.5.ebuild:
  Stable for HPPA (bug #283378).

  09 Sep 2009; Markus Meier <maekke@gentoo.org> pcsc-lite-1.5.5.ebuild:
  amd64/x86 stable, bug #283378

  05 Sep 2009; Brent Baude <ranger@gentoo.org> pcsc-lite-1.5.5.ebuild:
  Marking pcsc-lite-1.5.5 ppc64 for bug 283378

  31 Aug 2009; Brent Baude <ranger@gentoo.org> pcsc-lite-1.5.4.ebuild:
  stable ppc64, bug 279399

  25 Aug 2009; Raúl Porcel <armin76@gentoo.org> pcsc-lite-1.5.4.ebuild:
  arm/ia64/m68k/s390/sh/sparc stable wrt #279399

  09 Aug 2009; nixnut <nixnut@gentoo.org> pcsc-lite-1.5.4.ebuild:
  ppc stable #279399

  05 Aug 2009; Markus Meier <maekke@gentoo.org> pcsc-lite-1.5.4.ebuild:
  x86 stable, bug #279399

*pcsc-lite-1.5.5 (02 Aug 2009)

  02 Aug 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +pcsc-lite-1.5.5.ebuild:
  Version bump.

  31 Jul 2009; <chainsaw@gentoo.org> pcsc-lite-1.5.4.ebuild:
  Marked stable on AMD64 as requested by Arfrever Frehtes Taifersar Arahesis
  <arfrever@gentoo.org>. Compile-tested on a Core2 Duo with USE="hal usb
  -static".

*pcsc-lite-1.5.4 (28 Jun 2009)

  28 Jun 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -pcsc-lite-1.4.2.ebuild, -pcsc-lite-1.4.4.ebuild,
  -pcsc-lite-1.4.99.ebuild, -pcsc-lite-1.4.102.ebuild,
  -pcsc-lite-1.5.2.ebuild, +pcsc-lite-1.5.4.ebuild:
  Version bump.

  15 Jun 2009; Jeroen Roovers <jer@gentoo.org> pcsc-lite-1.5.3.ebuild:
  Stable for HPPA (bug #271911).
