@@ -1,6 +1,8 @@
 AUX pcscd-confd 84 RMD160 02f722d5cae6dc5c160a76e923a7e23964b3fe83 SHA1 6cbb6873928d87b7ce02292075fbe56d791f3e18 SHA256 b2ca734ebf73e367f24434895935e6215582a104bc7924d1d02af0d74877322b
 AUX pcscd-init 567 RMD160 e919fea24e9003edaea0763c4f310cfb20dc4462 SHA1 865696383095191ce9c3c0db0ff1b43309467c67 SHA256 71d043ced8f70939f569f48677ed6ad544876389a79a96d0277c4c29b7a81755
 DIST pcsc-lite-1.5.5.tar.bz2 465947 RMD160 99f56839483d7364426e0d70ec6825f551b4c49e SHA1 6791a8bd07f69972f708d4bdd03d6b1056c7af3e SHA256 051de6f3c1deff9a9c6f72995f6b9d271a23fc8aea74737f1902cabf1a71ed26
+DIST pcsc-lite-1.6.1.tar.bz2 477860 RMD160 bbf6029500dc49a6d1bbd057deda50fca570d858 SHA1 049e0a3bcb1bff5f173b94927230c5baa690e9e0 SHA256 7094e8aefbf62f46fbcc2da11865a9730675cdceb0b3663f03a65ce65eedc91c
 EBUILD pcsc-lite-1.5.5.ebuild 1737 RMD160 8eb0c858cb11035e1752601b619651ed9828008d SHA1 8af64c6f47562a7d84a61988a98b9f704ede892f SHA256 f784ac920d5970473bc8bab1b0fe19ac0d506320948538c0da300eb1235f5a84
-MISC ChangeLog 10565 RMD160 60b68c95644c6d7df51d55119e0fe4adf617b4a3 SHA1 5ed21f8dbea03030b2539c14f0740f7c5cb7c753 SHA256 d579af4e67debe763093e4b7a6e5015de061637e21151349fdda9196826fe58c
+EBUILD pcsc-lite-1.6.1.ebuild 1738 RMD160 5a7bba72fc41ba0bd21f3c5a54e84efdfa4a4dce SHA1 571ffbf53ebb74d2bde571e09eb9e7d46fc26eb0 SHA256 5f10fe64c84b8049afb043771c27086b54cd16551d99432d90c779a5ec3d7d57
+MISC ChangeLog 10891 RMD160 83b4d4f4383bf8ad42e18a4f729ac81236396006 SHA1 c8bd2b1545b9476f8daeeb9b0058f763f5c513c0 SHA256 09dee5dc8ef5bbc12d212e66c6474d9624d79ee20b936e3b3a1407ae0c2ef7b6
 MISC metadata.xml 244 RMD160 9a9367ba3a24404b82d10ffe6493dbe43dfcb718 SHA1 b609f191e50f68af8331dfd824a8d72d48fd3ac0 SHA256 b93928eec206138ccf14d2c0dd1ebd2bbbf1cda0b8b69f540eb7f17e729cb5bf
